fix: CI workflow with pytest import path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Run pytest
         run: |
+          export PYTHONPATH="${PYTHONPATH}:$(pwd)"
           pytest
 
       - name: Build Docker image
